--- a/requirements..txt
+++ b/requirements..txt
@@ -1,1 +1,5 @@
-GPT-2 often defaults to stereotypes (e.g., nurses as female, engineers as male). This project highlights why bias detection matters in AI!
+transformers==4.28.1
+torch==2.0.0
+nltk==3.8.1
+pandas==1.5.3
+matplotlib==3.7.1
